fixed team assignments

--- a/templates/base.html
+++ b/templates/base.html
@@ -7,7 +7,7 @@
 
 <head>
 
-  <title> Battlefield Gaming Systems </title>
+  <title> IRL Systems - Battlefield </title>
   <meta charset="UTF-8">
   <meta name={{ author }}
         content="Results earned here.">
@@ -15,7 +15,7 @@
 </head>
 
 <header>
-    <bold> <em style="font-size:110%; text-transform: uppercase"> Battlefield Gaming <br> Systems </em> </bold>
+    <bold> <emph style="font-size:110%; font-family: 'Andale Mono';"> IRL Systems <br> - Battlefield - </emph> </bold>
 
 </header>
 
