fixed scoring and don't give time if the capture was closed by END_GAME

--- a/templates/players.html
+++ b/templates/players.html
@@ -35,9 +35,11 @@
             {% for col in t_sc_cols %}
 
                 {% if col == 'time' %}
-                <td> {{ team_times[dat['team']]//60 if team_times[dat['team']] else 0 }} </td>
+                <td style="width:33%"> {{ team_times[dat]//60 if team_times[dat] else 0 }} </td>
+                {% elif col == 'team' %}
+                <td style="width:33%"> {{ dat }} </td>
                 {% else %}
-                <td> {{ dat[col] | safe }} </td>
+                <td style="width:33%"> {{ team_score[dat] | safe }} </td>
                 {% endif %}
 
             {% endfor %}
@@ -48,7 +50,7 @@
 
 
 {% for nd in node_times %}
-<h3> {{ nd if nd else node_times[nd][0]['node'] }} </h3>
+<h3> {{ nd if nd else node_times[nd].node }} </h3>
 <table id="table">
   <thead>
     <tr>
@@ -68,8 +70,8 @@
     {% for dat in node_times[nd] %}
     <tr class="row">
 
-            <td> {{ dat['team'] | safe }} </td>
-            <td> {{ dat['time']//60 if dat['time'] else 0 }} </td>
+            <td style="width:50%"> {{ dat[0] | safe }} </td>
+            <td style="width:50%"> {{ dat[1]//60 if dat[1] else 0 }} </td>
 
     </tr>
     {% endfor %}
@@ -98,13 +100,15 @@
     <tbody>
         {% for dat in plyr_score %}
         <tr class="row">
+
             {% for col in p_sc_cols %}
                 {% if col.lower() == 'player' %}
-                <td> {{ players[dat[col]]['lname'] if dat[col] in players else dat[col] | safe }} </td>
+                <td style="width:50%"> {{ players[dat] if dat in players else dat | safe }} </td>
                 {% else %}
-                <td> {{ dat[col] | safe }} </td>
+                <td style="width:50%"> {{ plyr_score[dat] | safe }} </td>
                 {% endif %}
             {% endfor %}
+
         </tr>
         {% endfor %}
     </tbody>
