--- a/templates/node_admin.html
+++ b/templates/node_admin.html
@@ -125,9 +125,13 @@
                 <tr class="row" style="color:#808080;">
 
                     <td> {{ n | safe }} </td>
-                    <td> {{ node_status[n].location | safe }} </td>
+                    <td> {{ node_status[n].location  | safe }} </td>
                     <td> {{ cmd_dict[node_status[n].config] | safe }} </td>
-
+                    <td> {{ node_status[n].cap_time  | safe }} </td>
+                    <td> {{ node_status[n].med_time  | safe }} </td>
+                    <td> {{ node_status[n].bomb_time | safe }} </td>
+                    <td> {{ node_status[n].cap_asst  | safe }} </td>
+                    
                 </tr>
                 {% endfor %}
 
