--- a/templates/node_admin.html
+++ b/templates/node_admin.html
@@ -127,11 +127,11 @@
                     <td> {{ n | safe }} </td>
                     <td> {{ node_status[n].location  | safe }} </td>
                     <td> {{ cmd_dict[node_status[n].config] | safe }} </td>
-                    <td> {{ node_status[n].cap_time  | safe }} </td>
-                    <td> {{ node_status[n].med_time  | safe }} </td>
-                    <td> {{ node_status[n].bomb_time | safe }} </td>
-                    <td> {{ node_status[n].cap_asst  | safe }} </td>
-                    
+                    <td> {{ print_time(node_status[n].cap_time)  | safe }} </td>
+                    <td> {{ print_time(node_status[n].med_time)  | safe }} </td>
+                    <td> {{ print_time(node_status[n].bomb_time) | safe }} </td>
+                    <td> {{ print_perc(node_status[n].cap_asst)  | safe }} </td>
+
                 </tr>
                 {% endfor %}
 
