--- a/templates/base.html
+++ b/templates/base.html
@@ -14,8 +14,8 @@
 
 </head>
 
-<header>
-    <bold> <emph style="font-size:110%; font-family: 'Andale Mono';"> IRL Systems <br> - Battlefield - </emph> </bold>
+<header class="glow">
+    <bold> <emph style="font-size:110%; font-family: 'Andale Mono';"> IRL Systems <br> battlefield </emph> </bold>
 
 </header>
 
