--- a/static/css/main.css
+++ b/static/css/main.css
@@ -493,3 +493,37 @@ dd, dt {
     text-shadow: 0 0 0.2em #fff, 0 0 0.3em #fdd, 0 0 0.4em #fbb, 0 0 0.5em #f99, 0 0 0.6em #f66, 0 0 0.7em #f33, 0 0 0.8em #f11;
   }
 }
+
+
+.error {
+  border: 1px solid rgba(241, 6, 6, 0.81);
+    background-color: rgba(220, 17, 1, 0.16);
+    box-shadow: 0px 0px 2px #ff0303;
+    color: #ff0303;
+    text-shadow: None;
+  transition:0.5s;
+  cursor:pointer;
+  font-size: 110%;
+}
+
+.alert:hover {
+  background-color: rgba(220, 17, 1, 0.33);
+  transition:0.5s;
+}
+
+
+.success {
+    border: 1px solid rgba(36, 241, 6, 0.46);
+    background-color: rgba(7, 149, 66, 0.12);
+    box-shadow: 0px 0px 2px #259c08;
+    color: #0ad406;
+  text-shadow: None;
+  transition:0.5s;
+  cursor:pointer;
+  font-size: 110%;
+}
+
+.success:hover{
+  background-color: rgba(7, 149, 66, 0.35);
+  transition:0.5s;
+}
