change the name to SkirMesh!

--- a/templates/base.html
+++ b/templates/base.html
@@ -15,8 +15,9 @@
 </head>
 
 <header class="glow">
-    <bold> <emph style="font-size:110%; font-family: 'Andale Mono';"> IRL Systems <br> battlefield </emph> </bold>
-
+    <bold style="font-size:110%; font-family: cursive;">Skir</bold>
+    <emph style="font-size:115%; font-family:fantasy;">Mesh</emph>
+    <br>battlefield
 </header>
 
 <br>
