--- a/templates/base.html
+++ b/templates/base.html
@@ -2,8 +2,11 @@
 <html>
 <script src="../static/js/script.js"></script>
 
+
 <link rel="icon" href="../static/img/logo.ico">
 <link rel="stylesheet" type="text/css" href="../static/css/main.css">
+<link rel="stylesheet" type="text/css" href="../static/css/fonts.css" charset="utf-8" />
+<link rel="stylesheet" type="text/css" href="../static/css/particles.css" charset="utf-8" />
 
 <head>
 
@@ -14,11 +17,20 @@
 
 </head>
 
+
 <header class="glow">
-    <bold style="font-size:110%; font-family: cursive;">Skir</bold>
-    <emph style="font-size:115%; font-family:fantasy;">Mesh</emph>
-    <br>battlefield
+    <div id="particles-js"></div>
+    <script src="../static/js/particles.js"></script>
+    <script src="../static/js/particle_app.js"></script>
+    
+    <bold style="font-size:110%; font-family:'libre_barcode_39_extended_tRg';">SkirMesh</bold>
+    <br>
+    <emph style="font-family:'special_eliteregular';">battlefield</emph>
 </header>
+
+
+
+
 
 <br>
 
