--- a/static/css/particles.css
+++ b/static/css/particles.css
@@ -12,7 +12,7 @@
 
 #particles-js {
     width: 100%;
-    height: 100%;
+    /* height: 100%; */
     position: fixed;
     z-index: -999;
     top: 0;
