remove references to ballahack on standard layout

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -441,10 +441,10 @@ table thead tr th {
 #form_submit_button:hover {background-color: var(--button_color_hover)}
 
 #mbr_search {
-  background-image: url('../img/ss.png');
+  /* background-image: url('../img/ss.png');
   background-size: contain;
   background-position: right center;
-  background-repeat: no-repeat;
+  background-repeat: no-repeat; */
   float: right;
   width: 40%;
   font-size: 1em;
