use field links to get to desired field - no more ballahack default

--- a/templates/base.html
+++ b/templates/base.html
@@ -68,7 +68,7 @@
 <center>
     <footer style="align:center;">
         &copy; Copyright 2019 - 2021
-        Battlefield Gaming Systems
+        SkirMesh Gaming
 
         <!-- <br> <br>
 
