fix and add a few fields for selecting the scenario

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -355,7 +355,7 @@ td {
 }
 
 svg {
-    background-image: url('../img/field.png');
+    /* background-image: url('../img/field.png'); */
     background-repeat: no-repeat;
     background-size: contain;
 }
