--- a/templates/field_chooser.html
+++ b/templates/field_chooser.html
@@ -12,5 +12,14 @@
     Ballahack
 </a>
 
+<a class="field_link" id="ballahack" href="/index/salina_gambit_A">
+    Salina Gambit (A)
+</a>
+
+<a class="field_link" id="ballahack" href="/index/salina_gambit_B">
+    Salina Gambit (B)
+</a>
+
+<br>
 
 {% endblock %}
