--- a/static/css/field_links.css
+++ b/static/css/field_links.css
@@ -2,20 +2,23 @@
 
 .field_link {
 
-    width: 50%;
-    height: 3em;
-    font-size: 200%;
+    width:         40%;
+    height:        3em;
+    font-size:     200%;
     border-radius: 0.1em;
 
     display: inline-flex;
     justify-content: center;
     align-items: center;
 
+    margin:  0.5em;
+    padding: 0.2em;
+
 }
 
 #ballahack.field_link {
 
-    background-image: url('../img/ballahack.png');
+    background-image: url('../img/logos/ballahack.png');
     background-size: contain;
     background-position: right center;
     background-repeat: no-repeat;
