update ballahack font

--- a/templates/field_chooser.html
+++ b/templates/field_chooser.html
@@ -9,15 +9,15 @@
 <br>
 
 <a class="field_link" id="ballahack" href="/index/ballahack">
-    Ballahack
+    BALLAHACK
 </a>
 
 <a class="field_link" id="ballahack" href="/index/salina_gambit_A">
-    Salina Gambit (A)
+    BALLAHACK<br>Salina Gambit (A)
 </a>
 
 <a class="field_link" id="ballahack" href="/index/salina_gambit_B">
-    Salina Gambit (B)
+    BALLAHACK<br>Salina Gambit (B)
 </a>
 
 <br>
