--- a/static/css/field_links.css
+++ b/static/css/field_links.css
@@ -2,17 +2,19 @@
 
 .field_link {
 
-    width:         40%;
-    height:        3em;
+    width:         30%;
+    height:        2.5em;
     font-size:     200%;
     border-radius: 0.1em;
 
     display: inline-flex;
-    justify-content: center;
+    text-align: left;
+    justify-content: left;
     align-items: center;
+    vertical-align: middle;
 
-    margin:  0.5em;
-    padding: 0.2em;
+    margin:  0.1em;
+    padding: 0.1em;
 
 }
 
@@ -25,5 +27,7 @@
 
     background-color: var(--BLACK);
     color: var(--WHITE);
+
+    font-family: 'mouse_memoirsregular';
 
 }
