--- a/static/css/fonts.css
+++ b/static/css/fonts.css
@@ -17,3 +17,12 @@
     font-style: normal;
 
 }
+
+@font-face {
+    font-family: 'mouse_memoirsregular';
+    src: url('mousememoirs-regular-webfont.woff2') format('woff2'),
+         url('mousememoirs-regular-webfont.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+
+}
