Added login page and register page, nothing shows that it is immediately broke but there is still a lot of work to do.
TODO:
add conditional formatting with the logged in user
pretty up all the forms
add a log out button

--- a/templates/base.html
+++ b/templates/base.html
@@ -8,6 +8,10 @@
 <link rel="stylesheet" type="text/css" href="../static/css/fonts.css" charset="utf-8" />
 <link rel="stylesheet" type="text/css" href="../static/css/particles.css" charset="utf-8" />
 
+<ul id="user-controls" class="user-buttons">
+    <li><a href="/login">Login</a></li>
+</ul>
+
 <head>
 
   <title> IRL Systems - Battlefield </title>
