Added conditional formatting based on user log in status, and added the template for the player profile.

--- a/templates/base.html
+++ b/templates/base.html
@@ -9,7 +9,12 @@
 <link rel="stylesheet" type="text/css" href="../static/css/particles.css" charset="utf-8" />
 
 <ul id="user-controls" class="user-buttons">
-    <li><a href="/login">Login</a></li>
+    {% if current_user.is_anonymous %}
+      <li><a href="/login">Login</a></li>
+    {% else %}
+      <li><a href="/player_profile/{{ current_user.callsign }}">My Profile</a></li>
+      <li><a href="/logout">Logout</a></li>
+    {% endif %}
 </ul>
 
 <head>
