--- a/templates/login.html
+++ b/templates/login.html
@@ -16,7 +16,7 @@
           {{ form.submit() }}
         </dl>
 
-        <p>Dont have an account? Click <a href="/register">Here.</p>
+        <p>Dont have an account? Click <a href="/register">Here.</a></p>
 
    </form>
 
