style and form updates

--- a/templates/base.html
+++ b/templates/base.html
@@ -52,7 +52,6 @@
 <br>
 
 <body>
-  <!-- <h2> We manage your stats, so you can get back to things that matter. </h2> -->
 
   {% with messages = get_flashed_messages() %}
     {% if messages %}
@@ -75,25 +74,11 @@
 <br>
 
 <center>
+
     <footer style="align:center;">
-        &copy; Copyright 2019 - 2021
-        SkirMesh Gaming
-
-        <!-- <br> <br>
-
-        <a href="https://www.ballahackairsoft.com">
-        <img src="{{ url_for('static', filename='img/logo.png') }}"
-             style="max-width: 15%; padding:2em;"
-             align="middle">
-        </a>
-
-        <a href="https://www.youtube.com/channel/UCB74I2EiE5dC0CAeDXbBjfA">
-        <img src="{{ url_for('static', filename='img/ss.png') }}"
-             style="max-width: 15%; padding:2em;"
-             align="middle">
-        </a> -->
-
+        &copy; Copyright 2019 - 2021 SkirMesh Gaming
     </footer>
+
 </center>
 
 <script src="../static/js/particles.js"></script>
