update registration page mapping

--- a/templates/user_reg.html
+++ b/templates/user_reg.html
@@ -2,21 +2,6 @@
 
 {% block content %}
 
-    {% from "_formhelpers.html" import render_field %}
-    <form id="user_registration"
-          name="Member_Data"
-          action=""
-          method="post"
-          style="float:center">
-
-        <dl>
-          {{render_field(form.fname)}}
-          {{render_field(form.lname)}}
-        </dl>
-
-        <input id="reg_form_submit" type="submit" value="Submit">
-
-
     <select name="Players" id="players">
         {% for player in Players %}
         <option value={{  player['id']  }}>{{  player.lname  }},
@@ -34,7 +19,7 @@
            </input>
     <!-- put some shit in here about where to put the uid >
     <!-->
-    <h1 id="uidblock" value="">UID Goes Here</h1>
+    <h1 id="uidblock" value=""> </h1>
 
     <input class="button"
            id="assign_uid_button"
