--- a/templates/base.html
+++ b/templates/base.html
@@ -44,7 +44,7 @@
     <ul id="main-nav">
         <li><a href="/index">Home</a></li>
         <li><a href="/players">Leaderboard</a></li>
-        <li><a href="/user_reg">Registration</a></li>
+        <li><a href="/user_reg">Pair UID</a></li>
         <li><a href="/node_admin">Node Admin</a></li>
         <li><a href="/comms">Comms Log</a></li>
     </ul>
