--- a/templates/node_admin.html
+++ b/templates/node_admin.html
@@ -20,8 +20,8 @@
                   <label for="dest"> Destination Node </label> <br>
                   <select name="dest" id="dest" placeholder="Destination Node" onchange="update_cmd_opts()">
                       <option value="FFFF">BROADCAST</option>
-                      {% for n in node_status %}
-                      <option value="{{ n }}">{{ node_status[n].location if node_status[n].location else n }}</option>
+                      {% for node in node_status %}
+                      <option value="{{ node.node }}">{{ node.location if node.location else node.node }}</option>
                       {% endfor %}
                   </select>
               </div>
@@ -121,16 +121,16 @@
 
             <tbody>
 
-                {% for n in node_status %}
+                {% for node in node_status %}
                 <tr class="row" style="color:#808080;">
 
-                    <td> {{ n                                                | safe }} </td>
-                    <td> {{ node_status[n].location                          | safe }} </td>
-                    <td> {{ cmd_dict[node_status[n].config]                  | safe }} </td>
-                    <td> {{ print_time((node_status[n].cap_time or 0) * 10)  | safe }} </td>
-                    <td> {{ print_time((node_status[n].med_time or 0) * 10)  | safe }} </td>
-                    <td> {{ print_time((node_status[n].bomb_time or 0) * 10) | safe }} </td>
-                    <td> {{ print_perc(node_status[n].cap_asst)              | safe }} </td>
+                    <td> {{ node.node                              | safe }} </td>
+                    <td> {{ node.location                          | safe }} </td>
+                    <td> {{ cmd_dict[node.config]                  | safe }} </td>
+                    <td> {{ print_time((node.cap_time or 0) * 10)  | safe }} </td>
+                    <td> {{ print_time((node.med_time or 0) * 10)  | safe }} </td>
+                    <td> {{ print_time((node.bomb_time or 0) * 10) | safe }} </td>
+                    <td> {{ print_perc(node.cap_asst)              | safe }} </td>
 
                 </tr>
                 {% endfor %}
