--- a/static/css/field_links.css
+++ b/static/css/field_links.css
@@ -16,7 +16,14 @@
     margin:  0.1em;
     padding: 0.1em;
 
+    transition: all .2s ease-in-out;
+
 }
+
+.field_link:hover {
+transform: scale(1.1);
+}
+
 
 #ballahack.field_link {
 
