--- a/templates/node_admin.html
+++ b/templates/node_admin.html
@@ -20,8 +20,9 @@
                   <label for="dest"> Destination Node </label> <br>
                   <select name="dest" id="dest" placeholder="Destination Node" onchange="update_cmd_opts()">
                       <option value="FFFF">BROADCAST</option>
-                      {% for n in node_status %}
-                      <option value="{{ n }}">{{ node_status[n].location if node_status[n].location else n }}</option>
+                      {% for n in node_dict %}
+                      <option value="{{ n.node }}">{{ n.location if n.location else n.node }}</option>
+                      
                       {% endfor %}
                   </select>
               </div>
@@ -121,16 +122,16 @@
 
             <tbody>
 
-                {% for n in node_status %}
+                {% for n in node_dict %}
                 <tr class="row" style="color:#808080;">
 
-                    <td> {{ n                                                | safe }} </td>
-                    <td> {{ node_status[n].location                          | safe }} </td>
-                    <td> {{ cmd_dict[node_status[n].config]                  | safe }} </td>
-                    <td> {{ print_time((node_status[n].cap_time or 0) * 10)  | safe }} </td>
-                    <td> {{ print_time((node_status[n].med_time or 0) * 10)  | safe }} </td>
-                    <td> {{ print_time((node_status[n].bomb_time or 0) * 10) | safe }} </td>
-                    <td> {{ print_perc(node_status[n].cap_asst)              | safe }} </td>
+                    <td> {{ n.node                               | safe }} </td>
+                    <td> {{ n.location                           | safe }} </td>
+                    <td> {{ n.config                             | safe }} </td>
+                    <td> {{ print_time((n.cap_time or 0) * 10)   | safe }} </td>
+                    <td> {{ print_time((n.med_time or 0) * 10)   | safe }} </td>
+                    <td> {{ print_time((n.bomb_time or 0) * 10)  | safe }} </td>
+                    <td> {{ print_perc(n.cap_asst)               | safe }} </td>
 
                 </tr>
                 {% endfor %}
